adding many format

--- a/ecommerce-front/src/styles.css
+++ b/ecommerce-front/src/styles.css
@@ -73,11 +73,9 @@
 .jumbotron {
     height: 180px;
     color: #fff;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    -webkit-animation: Gradient 15s ease infinite;
-    -moz-animation: Gradient 15s ease infinite;
-    animation: Gradient 15s ease infinite;
+    background-color: #232f3e;
+    
+
 }
 
 @-webkit-keyframes Gradient {
@@ -114,4 +112,8 @@
     100% {
         background-position: 0% 50%;
     }
+}
+.nav-tabs{
+    background-color: #232f3e;
+
 }
