adding image to cart

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -16,14 +16,14 @@
     padding: 2px;
     font-size: 12px;
     font-style: italic;
-    background: #000;
+    background:#232f3e;
 }
 /**
  * single product page - product name
  */
 
 .name {
-    background: indigo;
+    background: teal;
     color: #fff;
     font-weight: bold;
 }
@@ -142,3 +142,4 @@
     z-index: +1000;
     font-size: 1.75rem;
 }
+
