--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -22,18 +22,6 @@
  * single product page - product name
  */
 
-.name {
-    
-    color: rgb(63, 61, 61);
-    font-weight: bold;
-    background-color: transparent;
-}
-
-.name:hover {
-    
-    color:#F08804;
-    font-weight: bolder;
-}
 
 
 /**
@@ -144,12 +132,69 @@ img:hover {
     background-size: cover;
 } */
 
-img{
+img.mb-3{
+ 
+     margin-bottom: 0; 
+}  
+
+
+img.{
     width:300px;
     height:300px; 
  /*Scale down will take the necessary specified space that is 100px x 100px without stretching the image*/
-     object-fit:scale-down;     
+     object-fit:scale-down;  
+     margin: 0; 
 } 
+
+
+
+
+@media only screen and (max-width: 600px) {
+    img{
+        width:300px;
+        height:300px; 
+         object-fit:scale-down; 
+         margin: 0;      
+    }
+}
+  
+  @media only screen and (min-width: 600px) {
+    img{
+        width:300px;
+        height:300px; 
+         object-fit:scale-down;  
+         margin: 0;     
+    }
+}
+  
+  @media only screen and (min-width: 768px) {
+    img{
+        width:300px;
+        height:100px; 
+         object-fit:scale-down;   
+         margin: 0;    
+    }
+}
+  
+  @media only screen and (min-width: 992px) {
+    img{
+        width:300px;
+        height:80px; 
+         object-fit:scale-down;
+         margin: 0;  
+    }
+} 
+  
+  @media only screen and (min-width: 1200px) {
+    img{
+        width:300px;
+        height:100px; 
+         object-fit:scale-down;
+         margin: 0;       
+    } 
+} 
+
+
 
 .card{
     border-color:transparent;
@@ -161,6 +206,58 @@ img{
     width: 100px;
     border-radius: 50px;
 
+}
+
+.name {
+    
+    color: rgb(63, 61, 61);
+    font-weight: bold;
+    font-size: .75rem;
+    background-color: transparent;
+    padding: 0;
+}
+
+.name:hover {
+    
+    color:#F08804;
+    font-weight: bolder;
+}
+
+.lead{
+   
+    font-size: .75rem;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+
+}
+
+p.row.ml-3{
+    margin: 0;
+}
+
+p.black-9{
+    margin-bottom: 0;
+}
+
+p.black-8{
+    margin-bottom: 2%;
+}
+
+i.fa-cart-plus{
+  font-size: 1rem;
+}
+
+row.ml-3{
+   padding: 0;
+}
+
+.card-body{
+    padding:0px;
+}
+
+product-img{
+    margin: 0;
 }
 
 
